Add assets style not finished

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,13 @@ body,
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: 'K2D';
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(/fonts/K2D-Regular.ttf);
+    }
+}
