--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@ body,
 
 @layer base {
     @font-face {
-        font-family: 'K2D';
+        font-family: "K2D";
         font-style: normal;
         font-weight: 400;
         font-display: swap;
